# Sutty

./: Cargo.toml  README.md  build.bat
sutty/: Cargo.toml
sutty-core/: Cargo.toml
sutty-core/src/: config.rs  lib.rs  ssh.rs
sutty-gui/: Cargo.toml
sutty-gui/src/: app.rs  icon.rs  main.rs  ui.rs
sutty/src/: main.rs  terminal.rs
sutty/src/tui/: app.rs  connection.rs  mod.rs
