[package]
name = "sutty-core"
version = "0.1.0"
edition = "2021"
description = "Shared SSH and config code for Sutty"

[dependencies]
russh = "0.61"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
