[package]
name = "sutty-gui"
version = "0.1.0"
edition = "2021"
description = "Sutty GUI SSH client"

[dependencies]
sutty-core = { path = "../sutty-core" }
eframe = "0.31"
egui = "0.31"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
